# aim-analyzer

./: .gitignore  CMakeLists.txt  README.md  config.toml  vcpkg.json
include/: aim_type.h  command_type.h  config.h  databaseConfig.h  logger.h  utils.h
src/: databaseConfig.cpp  main.cpp  utils.cpp
